experimental/parser/testdata/parser/def/nesting.proto.stderr.txt
error: unexpected service definition within message definition
  --> testdata/parser/def/nesting.proto:22:5
   |
19 | / message M {
20 | |     message M {}
21 | |     enum E {}
22 | |     service S {}
   | |     ^^^^^^^^^^^^ this service definition...
23 | |     extend E {}
24 | |     oneof O {}
25 | | }
   | \_- ...cannot be declared within this message definition
   |
   = help: this service definition can only appear at file scope

error: unexpected message definition within enum definition
  --> testdata/parser/def/nesting.proto:28:5
   |
27 | / enum E {
28 | |     message M {}
   | |     ^^^^^^^^^^^^ this message definition...
29 | |     enum E {}
...  |
33 | | }
   | \_- ...cannot be declared within this enum definition
   |
   = help: this message definition can only appear within one of file scope,
           message definition, or group definition

error: unexpected enum definition within enum definition
  --> testdata/parser/def/nesting.proto:29:5
   |
27 | / enum E {
28 | |     message M {}
29 | |     enum E {}
   | |     ^^^^^^^^^ this enum definition...
30 | |     service S {}
...  |
33 | | }
   | \_- ...cannot be declared within this enum definition
   |
   = help: this enum definition can only appear within one of file scope,
           message definition, or group definition

error: unexpected service definition within enum definition
  --> testdata/parser/def/nesting.proto:30:5
   |
27 | / enum E {
28 | |     message M {}
29 | |     enum E {}
30 | |     service S {}
   | |     ^^^^^^^^^^^^ this service definition...
31 | |     extend E {}
32 | |     oneof O {}
33 | | }
   | \_- ...cannot be declared within this enum definition
   |
   = help: this service definition can only appear at file scope

error: unexpected message extension block within enum definition
  --> testdata/parser/def/nesting.proto:31:5
   |
27 | / enum E {
...  |
30 | |     service S {}
31 | |     extend E {}
   | |     ^^^^^^^^^^^ this message extension block...
32 | |     oneof O {}
33 | | }
   | \_- ...cannot be declared within this enum definition
   |
   = help: this message extension block can only appear within one of file
           scope, message definition, or group definition

error: unexpected oneof definition within enum definition
  --> testdata/parser/def/nesting.proto:32:5
   |
27 | / enum E {
...  |
31 | |     extend E {}
32 | |     oneof O {}
   | |     ^^^^^^^^^^ this oneof definition...
33 | | }
   | \_- ...cannot be declared within this enum definition
   |
   = help: this oneof definition can only appear within one of message
           definition or group definition

error: unexpected message definition within service definition
  --> testdata/parser/def/nesting.proto:36:5
   |
35 | / service S {
36 | |     message M {}
   | |     ^^^^^^^^^^^^ this message definition...
37 | |     enum E {}
...  |
41 | | }
   | \_- ...cannot be declared within this service definition
   |
   = help: this message definition can only appear within one of file scope,
           message definition, or group definition

error: unexpected enum definition within service definition
  --> testdata/parser/def/nesting.proto:37:5
   |
35 | / service S {
36 | |     message M {}
37 | |     enum E {}
   | |     ^^^^^^^^^ this enum definition...
38 | |     service S {}
...  |
41 | | }
   | \_- ...cannot be declared within this service definition
   |
   = help: this enum definition can only appear within one of file scope,
           message definition, or group definition

error: unexpected service definition within service definition
  --> testdata/parser/def/nesting.proto:38:5
   |
35 | / service S {
36 | |     message M {}
37 | |     enum E {}
38 | |     service S {}
   | |     ^^^^^^^^^^^^ this service definition...
39 | |     extend E {}
40 | |     oneof O {}
41 | | }
   | \_- ...cannot be declared within this service definition
   |
   = help: this service definition can only appear at file scope

error: unexpected message extension block within service definition
  --> testdata/parser/def/nesting.proto:39:5
   |
35 | / service S {
...  |
38 | |     service S {}
39 | |     extend E {}
   | |     ^^^^^^^^^^^ this message extension block...
40 | |     oneof O {}
41 | | }
   | \_- ...cannot be declared within this service definition
   |
   = help: this message extension block can only appear within one of file
           scope, message definition, or group definition

error: unexpected oneof definition within service definition
  --> testdata/parser/def/nesting.proto:40:5
   |
35 | / service S {
...  |
39 | |     extend E {}
40 | |     oneof O {}
   | |     ^^^^^^^^^^ this oneof definition...
41 | | }
   | \_- ...cannot be declared within this service definition
   |
   = help: this oneof definition can only appear within one of message
           definition or group definition

error: unexpected message definition within message extension block
  --> testdata/parser/def/nesting.proto:44:5
   |
43 | / extend E {
44 | |     message M {}
   | |     ^^^^^^^^^^^^ this message definition...
45 | |     enum E {}
...  |
49 | | }
   | \_- ...cannot be declared within this message extension block
   |
   = help: this message definition can only appear within one of file scope,
           message definition, or group definition

error: unexpected enum definition within message extension block
  --> testdata/parser/def/nesting.proto:45:5
   |
43 | / extend E {
44 | |     message M {}
45 | |     enum E {}
   | |     ^^^^^^^^^ this enum definition...
46 | |     service S {}
...  |
49 | | }
   | \_- ...cannot be declared within this message extension block
   |
   = help: this enum definition can only appear within one of file scope,
           message definition, or group definition

error: unexpected service definition within message extension block
  --> testdata/parser/def/nesting.proto:46:5
   |
43 | / extend E {
44 | |     message M {}
45 | |     enum E {}
46 | |     service S {}
   | |     ^^^^^^^^^^^^ this service definition...
47 | |     extend E {}
48 | |     oneof O {}
49 | | }
   | \_- ...cannot be declared within this message extension block
   |
   = help: this service definition can only appear at file scope

error: unexpected message extension block within message extension block
  --> testdata/parser/def/nesting.proto:47:5
   |
43 | / extend E {
...  |
46 | |     service S {}
47 | |     extend E {}
   | |     ^^^^^^^^^^^ this message extension block...
48 | |     oneof O {}
49 | | }
   | \_- ...cannot be declared within this message extension block
   |
   = help: this message extension block can only appear within one of file
           scope, message definition, or group definition

error: unexpected oneof definition within message extension block
  --> testdata/parser/def/nesting.proto:48:5
   |
43 | / extend E {
...  |
47 | |     extend E {}
48 | |     oneof O {}
   | |     ^^^^^^^^^^ this oneof definition...
49 | | }
   | \_- ...cannot be declared within this message extension block
   |
   = help: this oneof definition can only appear within one of message
           definition or group definition

error: unexpected oneof definition at file scope
  --> testdata/parser/def/nesting.proto:51:1
   |
51 | / oneof O {
...  |
57 | | }
   | \_^ this oneof definition cannot be declared here
   |
   = help: this oneof definition can only appear within one of message
           definition or group definition

error: unexpected message definition within oneof definition
  --> testdata/parser/def/nesting.proto:52:5
   |
51 | / oneof O {
52 | |     message M {}
   | |     ^^^^^^^^^^^^ this message definition...
53 | |     enum E {}
...  |
57 | | }
   | \_- ...cannot be declared within this oneof definition
   |
   = help: this message definition can only appear within one of file scope,
           message definition, or group definition

error: unexpected enum definition within oneof definition
  --> testdata/parser/def/nesting.proto:53:5
   |
51 | / oneof O {
52 | |     message M {}
53 | |     enum E {}
   | |     ^^^^^^^^^ this enum definition...
54 | |     service S {}
...  |
57 | | }
   | \_- ...cannot be declared within this oneof definition
   |
   = help: this enum definition can only appear within one of file scope,
           message definition, or group definition

error: unexpected service definition within oneof definition
  --> testdata/parser/def/nesting.proto:54:5
   |
51 | / oneof O {
52 | |     message M {}
53 | |     enum E {}
54 | |     service S {}
   | |     ^^^^^^^^^^^^ this service definition...
55 | |     extend E {}
56 | |     oneof O {}
57 | | }
   | \_- ...cannot be declared within this oneof definition
   |
   = help: this service definition can only appear at file scope

error: unexpected message extension block within oneof definition
  --> testdata/parser/def/nesting.proto:55:5
   |
51 | / oneof O {
...  |
54 | |     service S {}
55 | |     extend E {}
   | |     ^^^^^^^^^^^ this message extension block...
56 | |     oneof O {}
57 | | }
   | \_- ...cannot be declared within this oneof definition
   |
   = help: this message extension block can only appear within one of file
           scope, message definition, or group definition

error: unexpected oneof definition within oneof definition
  --> testdata/parser/def/nesting.proto:56:5
   |
51 | / oneof O {
...  |
55 | |     extend E {}
56 | |     oneof O {}
   | |     ^^^^^^^^^^ this oneof definition...
57 | | }
   | \_- ...cannot be declared within this oneof definition
   |
   = help: this oneof definition can only appear within one of message
           definition or group definition

encountered 22 errors
